[[bin]]
name = "ternoa"
path = "src/main.rs"

[package]
name = "ternoa"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[dependencies]
# SC
sc-cli = { git = "https://github.com/capsule-corp-ternoa/substrate", branch = "ternoa-substrate-2022-02-03", features = [ "wasmtime" ] }

# Mainnet is enabled by default
ternoa-cli = { path = "node/cli", features = [ "chaosnet-native", "alphanet-native" ] }

[workspace]
members = [
    'node/cli',
    'node/client',
    "node/service",
    'runtime/chaosnet',
    'runtime/alphanet',
    'runtime/mainnet',
]

[profile.release]
panic = 'unwind'