[package]
name = "ternoa-common"
version = "0.1.0"
edition = "2018"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Frame
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }

# Sp
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }

# Ternoa
ternoa-primitives = { default-features = false, path = "../primitives" }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "sp-runtime/std",
    "sp-std/std",
    "ternoa-primitives/std",
]