[package]
name = "ternoa-core-primitives"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
# Sp
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-core/std",
]
