[package]
name = "ternoa-core-primitives"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"

[dependencies]
# Sp
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-core/std",
]
