[package]
name = "ternoa-core-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Sp
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"sp-core/std",
]
