[package]
name = "ternoa-executor"
version = "0.2.0"
edition = "2018"

[dependencies]
ternoa-primitives = { path = "../primitives" }
ternoa-runtime = { path = "../runtime" }
parity-scale-codec = { version = "2.2.0" }
trie-root = { version = "0.16.0" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "0.10.0-dev" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "0.10.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []