[package]
name = "ternoa-executor"
version = "0.1.0"
edition = "2018"
license = "Apache 2.0"

[dependencies]
# Frame
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }

# Sp
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "0.11.0", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "0.10.0-dev", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "5.0.0", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "5.0.0", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "5.0.0", branch = "master" }

# Ternoa
ternoa-primitives = { path = "../primitives" }
ternoa-runtime = { path = "../runtime" }

# Rest
parity-scale-codec = { version = "2.3.1" }
trie-root = { version = "0.17.0" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []