[package]
name = "ternoa"
version = "0.2.2"
edition = "2018"
build = "build.rs"

[[bin]]
name = "ternoa"
path = "src/main.rs"

[features]
default = [ "cli" ]
runtime-benchmarks = [
	"ternoa-runtime/runtime-benchmarks",
]
cli = [
	"ternoa-executor/wasmi-errno",
	"clap",
]

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[target.'cfg(target_arch="x86_64")'.dependencies]
ternoa-executor = { path = "../executor", features = [ "wasmtime" ] }
sc-cli = { git = "https://github.com/paritytech/substrate.git", features = [ "wasmtime" ], version = "0.10.0-dev", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", default-features = false, features = [ "wasmtime" ], version = "0.10.0-dev", branch = "master"}
sp-trie = { git = "https://github.com/paritytech/substrate.git", default-features = false, features = ["memory-tracker"], version = "5.0.0", branch = "master" }

[dependencies]
# Frame
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "4.0.0-dev", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }

# Sc
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "0.10.0-dev", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }

# Sp
sp-api = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-authorship = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", version = "0.10.0-dev", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false, version = "5.0.0", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", version = "0.11.0", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", version = "5.0.0", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
sp-transaction-storage-proof = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", version = "3.0.0", branch = "master" }

# Rest substrate
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "master" }
node-inspect = { git = "https://github.com/paritytech/substrate.git", version = "0.9.0-dev", branch = "master" }

# Rest
hex-literal = { version = "0.3.4" }
jsonrpc-core = { version = "18.0.0" }
jsonrpc-pubsub = { version = "18.0.0" }
serde_json = { version = "1.0.73" }
futures = { features = ["compat"], version = "0.3.19" }
codec = { package = "parity-scale-codec", version = "2.3.1" }
serde = { version = "1.0.132" }
rand = { version = "0.8.4" }
clap = { version = "3.0", features = ["derive"], optional = true }

# Ternoa
ternoa-executor = { path = "../executor" }
ternoa-primitives = { path = "../primitives" }
ternoa-runtime = { path = "../runtime" }
ternoa-marketplace = { default-features = false, path = "../pallets/marketplace" }

[build-dependencies]
vergen = "6.0.0"
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", version = "3.0.0", branch = "master" }